Fixed page overflow x not hidden
This causes weird page width when the features on the homepage is hovered

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,8 @@
     &.dark {
       @apply theme-dark;
     }
+    
+    @apply overflow-x-hidden;
   }
   
   body {
